required changes for users to migrate from one version of MapServer to the
next.  Developers are strongly encouraged to document their changes and
their impacts on the users here.  (Please add the most recent changes to 
the top of the list.)

For a complete change history, please see the Subversion log comments.


Version 5.6.4 (????-??-??):
---------------------------

- Ensure mapwmslayer.c does not unlink file before closing connection on it (#3451)

- Fix security exception issue in C# with MSVC2010 (#3438)

- Write out join CONNECTIONTYPE when saving a mapfile. (#3435)

- Fixed attribute queries to use an extent stored (and cached) as part of the queryObj
  rather than the map->extent. (#3424)

- Reverted msLayerWhichItems() to 5.4-like behavior although still supporting 
  retrieving all items (#3356,#3342)
 
- Grid layer: remove drawing of unnecessary gird lines (#3433) 

- OGC Filters for spatial dbs should be enclosed in parentheses (#3430)

- Improve the handling of simple string comparisons for raster classified
  values (#3425) 

- Add the ogc namspace to filters generated by Mapserver (#3414)

- Fix MS_NONSQUARE to work in mode=map (#3413)

- Improve error message when loadQuery() filename extension check fails (#3302)

- Fix GetLegendGraphic using keyimages (#3398)

- Fix getFeatureInfo queries on WFS layers (#3403)

- Fixed mapstring.c build problem related to errno (#3401).

- Correct ungeoreferenced defaults via GetExtent() on raster layer (#3368)

- More adjustments to how TLOCK_GDAL held around msGetGDALGeoTransform (#3368)


Version 5.6.3 (2010-03-22):
---------------------------

- Fixed XML transformation issues with expressions and symbols (#3397) 

- Fixed problem with PostGIS SQL bbox introduced in 5.6.2 (#3324)

- Fix backwards handling of iconv errors (w/ SDE) introduced in 5.6.2 (#2988)


Version 5.6.2 (2010-03-20):
---------------------------

- Check error returns from mapstring functions (#2988)
