@@ -15,6 +15,8 @@ For a complete change history, please see the Subversion log comments.
 Version 5.6.4 (????-??-??):
 ---------------------------
 
+- Correct PropertyName parsing for wfs post requests (#3235)
+
 - Ensure mapwmslayer.c does not unlink file before closing connection on it (#3451)
 
 - Fix security exception issue in C# with MSVC2010 (#3438)
